<resources>
    <string name="app_name">PetCare</string>
    <string name="logo">Logo</string>
    <string name="agregar">AGREGAR</string>
    <string name="guardar">GUARDAR</string>
    <string name="imagen_mascota">Imagen mascota</string>
    <string name="editar_imagen">Editar imagen</string>
    <string name="nombre_mascota">Nombre mascota</string>
    <string name="tipo_de_mascota">Tipo de mascota (Perro, Gato, etc)</string>
    <string name="edad">Edad</string>
    <string name="vacuna">Vacuna</string>
    <string name="activa">Activa</string>
    <string name="fecha">Fecha</string>
    <string name="crear_vacuna">CREAR VACUNA</string>
    <string name="editar">Editar</string>
    <string name="eliminar">Eliminar</string>
    <string name="vacunas">Vacunas</string>
    <string name="mascotas">Mascotas</string>
    <string name="perfil">Perfil</string>
    <string name="agregarpet">AGREGAR MASCOTA</string>
    <string name="editarpet">EDITAR MASCOTA</string>
    <string name="nombrepet">NOMBRE MASCOTA</string>
    <string name="agregarvacu">CREAR VACUNA</string>
    <string name="editarvacu">EDITAR VACUNA</string>
    <string name="item_mascota">Item mascota</string>
    <string name="ultima_vacuna">Ultima vacuna</string>
    <string name="info">Acerca de</string>
    <string name="avatar">Selecciona un avatar</string>
    <string name="cerrar">Cerrar</string>
    <string name="buho">Buho</string>
    <string name="caballo">Caballo</string>
    <string name="cerdo">Cerdo</string>
    <string name="conejo">Conejo</string>
    <string name="gallina">Gallina</string>
    <string name="gato">Gato</string>
    <string name="hamster">Hamster</string>
    <string name="jirafa">Jirafa</string>
    <string name="lobo">Lobo</string>
    <string name="oso">Oso</string>
    <string name="panda">Panda</string>
    <string name="perro">Perro</string>
    <string name="pollo">Pollo</string>
    <string name="raton">Raton</string>
    <string name="vaca">Vaca</string>
    <string name="zorro">Zorro</string>
    <string name="hombre">Hombre</string>
    <string name="nombre1">Juan Camilo Restrepo</string>
    <string name="correo1">12camilorpo@gmail.com</string>
    <string name="contactanos">Contactanos</string>
    <string name="mujer">mujer</string>
    <string name="carolina_monsalve">Carolina Monsalve</string>
    <string name="carolina_monsalvev_upb_edu_co">carolina.monsalvev@upb.edu.co</string>
    <string name="descripcion">Descripción</string>
    <string name="descripcion_text">Esta es una aplicación que tiene como objetivo llevar el registro de todas las vacunas de las diferentes mascotas que el usuario tenga en su vivienda.</string>
</resources>