<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MascotaEditActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="124dp"
        tools:layout_editor_absoluteY="162dp">

        <ImageView
            android:id="@+id/ImgPet"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="20dp"
            android:contentDescription="@string/imagen_mascota"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/TxtImg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:gravity="center"
            android:singleLine="false"
            android:text="@string/editar_imagen"
            android:textAllCaps="false"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/TextNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/nombre_mascota"
            android:inputType="textPersonName"
            android:autofillHints="" />

        <EditText
            android:id="@+id/TextTipo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="10dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/tipo_de_mascota"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/TxtEdad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="10dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/edad"
            android:inputType="number" />

        <Button
            android:id="@+id/BtnEditPet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/guardar"
            android:textStyle="bold"
            app:cornerRadius="10dp" />

        <Button
            android:id="@+id/BtnRemovePet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/blue_dark"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/guardar"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:cornerRadius="10dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>