<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VacunaAddActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/TxtVacuna"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="10dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/vacuna"
            android:inputType="textPersonName" />

        <Switch
            android:id="@+id/swtActiva"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="10dp"
            android:checked="true"
            android:text="@string/activa"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/TxtFecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="10dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/fecha"
            android:inputType="date" />

        <Button
            android:id="@+id/BtnSaveVac"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="40dp"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/crear_vacuna"
            android:textStyle="bold"
            app:cornerRadius="10dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>