<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.VacunaEditActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/TxtVacunaEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="10dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/vacuna"
            android:inputType="textPersonName" />

        <Switch
            android:id="@+id/SwtActivaEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="10dp"
            android:checked="true"
            android:text="@string/activa"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/TxtFechaEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="10dp"
            android:autofillHints=""
            android:ems="10"
            android:focusable="false"
            android:hint="@string/fecha"
            android:inputType="date" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/BtnEditVac"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:backgroundTint="@color/red_dark"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/editar"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:cornerRadius="10dp" />

            <Button
                android:id="@+id/BtnRemoveVac"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="40dp"
                android:layout_weight="1"
                android:backgroundTint="@color/blue_dark"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/eliminar"
                android:textColor="@color/black"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>